Bug 1149893 - Add a pref that makes us decode all images immediately. r=baku